[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zimpy"
version = "0.1.0"
description = "zimpy: teaching-focused helper library for cleaning and untangling messy data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name="Chris Zimmer", email="zimmejoc@gmail.com" }
]
keywords = ["teaching", "data-cleaning", "unicode", "dates"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/doctorzimmy/zimpy"
"Issues" = "https://github.com/doctorzimmy/zimpy/issues"
